[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/LevelSelection.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://themes/timerDigits.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.780392, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.0156863, 0.0156863, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.792157, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47451, 0.435294, 0.435294, 1 )

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Button1" type="Button" parent="."]
margin_left = 131.928
margin_top = 192.054
margin_right = 248.928
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 309.462
margin_top = 192.054
margin_right = 426.462
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 488.33
margin_top = 192.054
margin_right = 605.33
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 664.529
margin_top = 192.054
margin_right = 781.529
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 839.529
margin_top = 192.054
margin_right = 956.529
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 1017.06
margin_top = 192.054
margin_right = 1134.06
margin_bottom = 305.054
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
margin_left = 309.462
margin_top = 365.583
margin_right = 426.462
margin_bottom = 478.583
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
margin_left = 486.996
margin_top = 365.583
margin_right = 603.996
margin_bottom = 478.583
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="."]
margin_left = 665.864
margin_top = 365.583
margin_right = 782.864
margin_bottom = 478.583
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="."]
margin_left = 842.063
margin_top = 365.583
margin_right = 959.063
margin_bottom = 478.583
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skipTutorials" type="CheckBox" parent="."]
margin_left = 370.407
margin_top = 622.335
margin_right = 860.407
margin_bottom = 699.335
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0196078, 0, 0, 1 )
text = "Skip tutorials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 890.0
margin_top = 601.0
margin_right = 1252.0
margin_bottom = 700.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Main MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="skipTutorials" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
